--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,35 @@
+
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url(./images/background.svg);
-  background-size: 100% auto;
-  color: #FFFFFF;
+    margin: 0;
+    padding: 0;
+    background-image: url(./images/background.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center; /* Centraliza a imagem */
+    color: #FFFFFF;
+  
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+@import-normalize;
+
+
+@media only screen and (max-width: 740px) {
+  body {
+      font-size: 14px;
+  }
+
+  /* Adicione estilos específicos para dispositivos móveis aqui */
 }
